<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/update_photo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_drawble">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"

            android:text="@string/from_photo"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/from_photo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/update_photo"
        android:layout_marginTop="5dp"
        android:background="@drawable/photo_drawble">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"

            android:text="@string/cature_photo"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/from_photo"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/photo_drawble"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>