<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/right">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sex"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="@color/color_363636"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86px"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/ll_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="180px"
                >
                <ImageView
                    android:id="@+id/iv_mail"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:background="@drawable/selector_mail"
                    />

                <TextView
                    android:id="@+id/tv_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="60px"
                    android:text="@string/man_desc"
                    android:textSize="24px"
                    android:textColor="@color/color_111111"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10px"
                    />
                
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_femail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="132px"
                >
                <ImageView
                    android:id="@+id/iv_femail"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:background="@drawable/selector_femail"
                    />

                <TextView
                    android:id="@+id/tv_femail"
                    android:layout_width="wrap_content"
                    android:layout_height="60px"
                    android:text="@string/girl_desc"
                    android:textSize="24px"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10px"
                    android:textColor="@color/color_111111"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="238px"
            android:layout_height="56px"
            android:background="@drawable/shape_button_save"
            android:text="@string/save_desc"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="66px"
            />

    </LinearLayout>

</RelativeLayout>