<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_shape"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:typeface="serif"
            android:gravity="center"
            android:text="@string/sure_exit_app_desc"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:background="@drawable/app_out_left_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/cancel"
            android:typeface="serif"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/app_out_right_shape"
            android:layout_weight="1"
            android:gravity="center"
            android:typeface="serif"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>
</RelativeLayout>