<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_7FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:layout_marginTop="10px"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="56px"
                android:layout_height="56px"
                android:padding="10px"
                android:src="@drawable/black_back"
                android:layout_centerVertical="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="16px"
                android:text="@string/regis"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54px"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:layout_marginTop="34px"
            android:background="@drawable/shape_relation"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="50px"
                android:layout_height="match_parent"
                android:src="@drawable/username_icon" />

            <EditText
                android:id="@+id/et_phone_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26px"
                android:layout_toRightOf="@+id/iv_username"
                android:background="@null"
                android:hint="@string/please_input_username"
                android:singleLine="true"
                android:textSize="@dimen/text_size_20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54px"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:layout_marginTop="20px">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54px"
                android:layout_toLeftOf="@+id/bt_send"
                android:background="@drawable/shape_relation"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_confirm"
                    android:layout_width="50px"
                    android:layout_height="match_parent"
                    android:src="@drawable/confirm" />

                <EditText
                    android:id="@+id/et_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="26px"
                    android:layout_toRightOf="@+id/iv_confirm"
                    android:background="@null"
                    android:hint="@string/vercode_desc"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_20sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/bt_send"
                android:layout_width="124px"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20px"
                android:background="@drawable/shape_send_vercode"
                android:text="@string/send_sms"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54px"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:layout_marginTop="20px"
            android:background="@drawable/shape_relation">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="50px"
                android:layout_height="match_parent"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="26px"
                android:layout_toRightOf="@+id/iv_password"
                android:background="@null"
                android:hint="@string/_8_16_password_input"
                android:inputType="textPassword"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_age"
            android:layout_width="match_parent"
            android:layout_height="54px"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:layout_marginTop="20px"
            android:background="@drawable/shape_relation">

            <ImageView
                android:id="@+id/iv_age"
                android:layout_width="50px"
                android:layout_height="match_parent"
                android:src="@drawable/age_icon" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/nice_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_age"
                android:textSize="@dimen/text_size_16sp"
                app:textTint="@color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="66px"
            android:layout_marginBottom="50px"
            android:layout_marginLeft="80px"
            android:layout_marginRight="80px"
            android:layout_marginTop="14px"
            android:background="@color/top_color"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>